# bionico

./: .gitmodules  readme.md
code/: AUTHORS  CMakeLists.txt  bionico.c  bionico.h  bq28z610-r1.c  bq28z610-r1.h  command.c  command.h  control_config.h  debug.h  electrodes.c  electrodes.h  led.c  led.h  ltc2943.c  ltc2943.h  motor.c  motor.h  mp2672.c  mp2672.h  naive_control.c  plot_charge.gnu  proportionnal_control.c  signal.c  signal.h  test_bq28z610-r1.c  test_charge.c  test_electrodes.c  test_led.c  test_motor.c  test_mp2672.c  test_vibrator.c  thermal_model.c  thermal_model.h  vibrator.c  vibrator.h
code/test/: CMakeLists.txt  test_ac_ok.c  test_bus_scan.c  test_charge.c  test_electrodes.c  test_led.c  test_ltc2943.c  test_motor.c  test_vibrator.c
elec/: .gitignore  COPYING.md  bionico.kicad_pcb  bionico.kicad_prl  bionico.kicad_pro  bionico.kicad_sch  bionico.kicad_sym  bom_csv_protoelectronics.py  electrodes.kicad_sch  motor.kicad_sch  ntc.py  power.kicad_sch
elec/bionico.pretty/: 0805_4.kicad_mod  1296.2004.kicad_mod  1296.3004.kicad_mod  1296.4004.kicad_mod  1296.4104.kicad_mod  1296.4114.kicad_mod  1296.4124.kicad_mod  1296.4134.kicad_mod  1296.4144.kicad_mod  1296.4154.kicad_mod  1296.6004.kicad_mod  1296_2004.wrl  1296_3004.wrl  1296_4004.wrl  1296_4104.wrl  1296_4114.wrl  1296_4124.wrl  1296_4134.wrl  1296_4144.wrl  1296_4154.wrl  1296_6004.wrl  C-292227-3.wrl  HSNT-8.kicad_mod  MC-232LD.kicad_mod  MC-232LD.stp  QFN-14-MP6551.kicad_mod  QFN-18_2x3mm_P0.4mm.kicad_mod  QFN-56-RP2040.kicad_mod  SNT-8A.kicad_mod  SOT-5X3.kicad_mod  Solder_pad_2.kicad_mod  Solder_pad_2_large.kicad_mod  TE_292227-3.kicad_mod  TS02CBE.kicad_mod  TS02CBE.stp  TS02CBE_PH-S2B.kicad_mod  TYPE-C-31-M-12.kicad_mod  USB4110-GF-A.kicad_mod  USB4145-03-0070-C.kicad_mod  USB4145-03-0070-C.stp  (+3 more)
enclosure/: enclosure.FCStd
